* Resolved issue with saving course categories
* Resolved translation issues
* Resolved issue with showing "No elements have been added to this page yet" on the last unit page without need
* Added support for WordPress "Week Starts On" day in the course date fields and the Unit Availability field
* Resolved issue where users saving their own profiles remove instructor capabilities
* Resolved issue with primary blog on multisite
* Other code improvements

= 1.2.2.9 =
* Added course reordering on courses admin page (drag & drop)
* Added new options under CoursePress general settings for controlling course order in admin and front 
* Added option for displaying different number of rows on the courses admin page
* New hooks for developers and code improvements
* Fixed issues with loosing element content 

= 1.2.2.8 =
* Critical Fix: Fixed bug preventing elements being added to units.

= 1.2.2.7 =
* Resolving translation issues on general settings page and email body (functions)
* Included new translation file containing all localization strings
* Added course calendar locale for month and day of the week names
* Fixed: Primary blog tweaks on multisite installs.
* Fixed: Instructor capabilities on multisite installs.
* Fixed: [course_list show_media="yes"] now correctly shows the media defined in settings.
* Updated MarketPress (2.9.5.8)
* Other small code improvements

= 1.2.2.6 =
* Fixed issue with wrong MD5 for instructor username in shortcodes which caused broken instructor single page if "Show Instructor Username in URL" option is not selected
* Fixed issue with table prefix (instructor_by_hash)
* Fixed issue with SKU not being shown on course overview page and product list in MarketPress
* Fix broken redirect to cart on signup
* Small code improvements

= 1.2.2.5 =
* Multisite improvements for students and instructors.
* Added course categories and course categories widget (in order to make it work please re-save CoursePress settings)